--- a/src/app/home/master-report/master-purchase-return-report/master-purchase-return-report.component.html
+++ b/src/app/home/master-report/master-purchase-return-report/master-purchase-return-report.component.html
@@ -21,7 +21,7 @@
                     <th>Purchase Invoice</th>
                     <th>Purchase Date</th>
                     <th>Return Date</th>
-                    <th>Medicine/Product Details</th>
+                    <th>Product Details</th>
                     <th>Purchase Qty (Box)</th>
                     <th>TP+VAT/Unit</th>
                     <th>Return Qty (Box)</th>
