--- a/src/app/home/purchase-list/purchase-list.component.html
+++ b/src/app/home/purchase-list/purchase-list.component.html
@@ -121,7 +121,7 @@
             <thead>
               <tr>
                 <th class="sl">Sl</th>
-                <th style="text-align: left;">Medicine</th>
+                <th style="text-align: left;">Item</th>
                 <th>Qty</th>
                 <th>CPU (Tk.)</th>
                 <th>Total (Tk.)</th>
