--- a/src/app/home/includes/header/header.component.html
+++ b/src/app/home/includes/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="app-header header-shadow bg-light-navbar-logo">
   <div class="app-header__logo">
-    <div class="logo-src"></div>
+    <img [src]="logoUrl" class="logo-img" />
     <div class="header__pane ml-auto">
     </div>
   </div>
